--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "webpack-dev-server":"^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
