--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "serialize-javascript": "2.1.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
