upgrades and updates

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "acorn": "7.1.1",
     "axios": "0.18.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
     "eslint-utils": "1.4.1",
+    "kind-of": "6.0.3",
+    "minimist": "0.2.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
