--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "serialize-javascript": "2.1.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "websocket-extensions": "0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
