--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.0.0",
     "eslint-utils": "1.4.1",
     "kind-of": "6.0.3",
+    "lodash": "4.17.19",
     "minimist": "1.2.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
