--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "0.18.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
+    "elliptic": "6.5.3",
     "eslint-utils": "1.4.1",
     "kind-of": "6.0.3",
     "minimist": "1.2.3",
