--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-utils": "1.4.1",
     "kind-of": "6.0.3",
     "minimist": "1.2.3",
+    "node-forge": "^0.10.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
