--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.0.0",
     "elliptic": "6.5.3",
     "eslint-utils": "1.4.1",
+    "http-proxy": "^1.18.1",
     "kind-of": "6.0.3",
     "minimist": "1.2.3",
     "node-forge": "^0.10.0",
@@ -22,7 +23,8 @@
     "react-scripts": "2.0.5",
     "serialize-javascript": "3.1.0",
     "styled-components": "^4.1.3",
-    "websocket-extensions": "0.1.4"
+    "websocket-extensions": "0.1.4",
+    "yargs-parser": "^13.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
