--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "acorn": "7.1.1",
-    "axios": "0.18.1",
+    "axios": "^0.21.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
     "elliptic": "6.5.3",
     "eslint-utils": "1.4.1",
     "http-proxy": "^1.18.1",
+    "immer": "^8.0.1",
+    "ini": "^1.3.6",
     "kind-of": "6.0.3",
     "minimist": "1.2.3",
     "node-forge": "^0.10.0",
+    "node-notifier": "^8.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
