--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
     "axios": "^0.21.1",
     "date-fns": "^1.30.1",
     "dotenv": "^8.0.0",
-    "elliptic": "6.5.3",
+    "elliptic": "^6.5.4",
     "eslint-utils": "1.4.1",
+    "handlebars": "^4.7.7",
+    "hosted-git-info": "^2.8.9",
     "http-proxy": "^1.18.1",
     "immer": "^8.0.1",
     "ini": "^1.3.6",
+    "is-svg": "^4.2.2",
     "kind-of": "6.0.3",
+    "lodash": "^4.17.21",
     "minimist": "1.2.3",
     "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
     "react": "^16.6.0",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "serialize-javascript": "3.1.0",
+    "sockjs": "^0.3.20",
+    "ssri": "^6.0.2",
     "styled-components": "^4.1.3",
+    "url-parse": "^1.5.0",
     "websocket-extensions": "0.1.4",
+    "y18n": "^4.0.1",
     "yargs-parser": "^13.1.2"
   },
   "scripts": {
