--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "acorn": "7.1.1",
     "axios": "^0.21.1",
+    "browserslist": "^4.16.5",
     "date-fns": "^1.30.1",
+    "dns-packet": "^1.3.2",
     "dotenv": "^8.0.0",
     "elliptic": "^6.5.4",
     "eslint-utils": "1.4.1",
@@ -22,9 +24,12 @@
     "kind-of": "6.0.3",
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
+    "merge-deep": "^3.0.3",
     "minimist": "1.2.3",
     "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
+    "path-parse": "^1.0.7",
+    "postcss": "^7.0.36",
     "react": "^16.6.0",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^16.6.0",
@@ -34,8 +39,10 @@
     "sockjs": "^0.3.20",
     "ssri": "^6.0.2",
     "styled-components": "^4.1.3",
+    "tar": "^4.4.15",
     "url-parse": "^1.5.0",
     "websocket-extensions": "0.1.4",
+    "ws": "^7.4.6",
     "y18n": "^4.0.1",
     "yargs-parser": "^13.1.2"
   },
