--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "acorn": "7.1.1",
     "axios": "^0.21.1",
+    "braces": "^2.3.1",
     "browserslist": "^4.16.5",
+    "color-string": "^1.5.5",
     "date-fns": "^1.30.1",
     "dns-packet": "^1.3.2",
     "dotenv": "^8.0.0",
     "elliptic": "^6.5.4",
     "eslint-utils": "1.4.1",
+    "glob-parent": "^5.1.2",
     "handlebars": "^4.7.7",
     "hosted-git-info": "^2.8.9",
     "http-proxy": "^1.18.1",
@@ -40,9 +43,9 @@
     "ssri": "^6.0.2",
     "styled-components": "^4.1.3",
     "tar": "^4.4.15",
-    "url-parse": "^1.5.0",
+    "url-parse": "^1.5.2",
     "websocket-extensions": "0.1.4",
-    "ws": "^7.4.6",
+    "ws": "^5.2.3",
     "y18n": "^4.0.1",
     "yargs-parser": "^13.1.2"
   },
