--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "2.0.5",
     "serialize-javascript": "3.1.0",
