--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.327.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
@@ -45,6 +46,7 @@
     "styled-components": "^5.3.10",
     "tar": "^4.4.15",
     "url-parse": "^1.5.2",
+    "uuid": "^9.0.0",
     "websocket-extensions": "0.1.4",
     "ws": "^5.2.3",
     "y18n": "^4.0.1",
