--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "8.0.0",
     "serialize-javascript": "3.1.0",
     "sockjs": "^0.3.20",
     "ssri": "^6.0.2",
