--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@hookform/resolvers": "^3.1.0",
     "acorn": "7.1.1",
     "axios": "^1.4.0",
     "braces": "^2.3.1",
@@ -51,7 +52,8 @@
     "websocket-extensions": "0.1.4",
     "ws": "^5.2.3",
     "y18n": "^4.0.1",
-    "yargs-parser": "^13.1.2"
+    "yargs-parser": "^13.1.2",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
