--- a/package.json
+++ b/package.json
@@ -10,50 +10,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@hookform/resolvers": "^3.1.0",
-    "acorn": "7.1.1",
     "axios": "^1.4.0",
-    "braces": "^2.3.1",
-    "browserslist": "^4.16.5",
-    "color-string": "^1.5.5",
-    "date-fns": "^1.30.1",
-    "dns-packet": "^1.3.2",
-    "dotenv": "^8.0.0",
-    "elliptic": "^6.5.4",
-    "eslint-utils": "1.4.1",
-    "glob-parent": "^5.1.2",
-    "handlebars": "^4.7.7",
+    "dotenv": "^16.0.3",
+    "eslint-config-react-app": "^7.0.1",
     "hosted-git-info": "^2.8.9",
-    "http-proxy": "^1.18.1",
-    "immer": "^8.0.1",
-    "ini": "^1.3.6",
-    "is-svg": "^4.2.2",
-    "kind-of": "6.0.3",
-    "lodash": "^4.17.21",
-    "merge": "^2.1.1",
-    "merge-deep": "^3.0.3",
-    "minimist": "1.2.3",
-    "node-forge": "^0.10.0",
-    "node-notifier": "^8.0.1",
-    "path-parse": "^1.0.7",
-    "postcss": "^7.0.36",
     "react": "^18.2.0",
-    "react-dev-utils": "^11.0.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "4.0.3",
     "react-toastify": "8.0.0",
-    "serialize-javascript": "3.1.0",
-    "sockjs": "^0.3.20",
-    "ssri": "^6.0.2",
     "styled-components": "^5.3.10",
-    "tar": "^4.4.15",
-    "url-parse": "^1.5.2",
     "uuid": "^9.0.0",
-    "websocket-extensions": "0.1.4",
-    "ws": "^5.2.3",
-    "y18n": "^4.0.1",
-    "yargs-parser": "^13.1.2",
     "yup": "^1.1.1"
   },
   "scripts": {
